style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    font-family: "DM Sans", sans-serif;
}
.hidde-open-icon {
    @apply rotate-180 scale-0 opacity-0;
}
.visible-close-icon {
    @apply rotate-180 scale-100 opacity-100;
}
.active-link span {
    @apply translate-x-0 scale-105 opacity-100;
}
.active-link div {
    @apply !bg-brand-secondary;
}
pre::-webkit-scrollbar {
    @apply h-0 w-1;
}
pre::-webkit-scrollbar-thumb {
    @apply h-0 w-1 rounded-full;
}
code {
    @apply !font-mono;
}

code[class*="language-"],
pre[class*="language-"] {
    @apply !text-onsurface-500 dark:!text-white;
}

.token.property,
.token.tag,
.token.boolean,
.token.number,
.token.constant,
.token.symbol {
    @apply !text-brand-primary dark:!text-brand-secondary;
}

.token.atrule,
.token.attr-value,
.token.keyword {
    @apply !text-[#93652f] dark:!text-[#579ECD];
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
    @apply !text-onsurface-400 dark:!text-white/60;
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
    @apply text-[#865cbd] dark:text-[#cc96ff];
}

